[package]
name        = "what_theme"
version     = "0.1.0"
edition     = "2021"
description = "looks up the current VsCode theme"
license     = "0BSD"

[dependencies]
directories = "4.0.1"
once_cell   = "1.13.0"
regex       = "1.6.0"
serde       = { version = "1.0.141", features = ["derive"] }
serde_json  = "1.0.82"
thiserror   = "1.0.31"
