[package]
name = "what_theme"
version = "0.2.0"
edition = "2021"
description = "looks up the current VsCode theme"
license = "0BSD"

[dependencies]
directories = "5.0.1"
once_cell = "1.18.0"
regex-lite = "0.1.0"
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
thiserror = "1.0.44"
